added login and signup cards

--- a/client/src/pages/Login.scss
+++ b/client/src/pages/Login.scss
@@ -20,3 +20,16 @@ form{
 h4{
     color: #655C56;
 }
+.logCard{
+    border: solid #655C56 1px;
+    background-color: #EFFCEF;
+    border-radius: 25px;
+    padding: 6px;
+    padding-left: 15%;
+    box-shadow: 2px 2px 2px #655C56;
+}
+input{
+    border-radius: 5px;
+    border: solid .5px  #655C56;
+    margin: 3px;
+}
