--- a/client/src/pages/profile.scss
+++ b/client/src/pages/profile.scss
@@ -1,25 +1,30 @@
 
-.portfolio-page {
-    padding-left: 100px;
-    padding-right: 50px;
-    width: calc(100% - 150px);
-    position: initial;
-    height: 100%;
-    overflow: auto;
+// .portfolio-page {
+//     padding-left: 100px;
+//     padding-right: 50px;
+//     width: calc(100% - 150px);
+//     position: initial;
+//     height: 100%;
+//     overflow: auto;
 
-    
+    .AllC{
+      display: flex;
+      position: absolute;
+      flex-direction: row;
+      flex-wrap: wrap;
+  }
 
-    .card-grid-view {
-        // display: flex;
-        justify-content: center;
-        flex-direction: co;
-        flex-wrap: wrap;
-        margin: 0;
-        padding: 0;
-        position: relative;
+    // .card-grid-view {
+    //     // display: flex;
+    //     justify-content: center;
+    //     flex-direction: co;
+    //     flex-wrap: wrap;
+    //     margin: 0;
+    //     padding: 0;
+    //     position: relative;
         
-      }
+    //   }
      
       
       
-}
+
