--- a/client/src/pages/SingleProject.scss
+++ b/client/src/pages/SingleProject.scss
@@ -7,11 +7,12 @@ display: flex;
   min-height: 100px;
   display: flex;
   flex-direction: column;
-  background: #94D3AC;
-  min-width: 341px;
+  background: #EFFCEF;
+  // min-width: 260px;
+  width: 25vw;
   // border-radius: 5px;
-  padding: 15px 15px;
-  margin-right: 45px;
+  padding: 11px 11px;
+  margin-right: 14px;
   box-shadow: 1px 1px 1px 2px gray;
 }
 
@@ -24,8 +25,23 @@ display: flex;
 
 .Title { 
   color: #655C56;
-  background: #EFFCEF;
+  background: #94D3AC;
   padding: 2px 10px;
   border-radius: 5px;
   align-self: flex-start;
+}
+.Sp1{
+  display: flex;
+  position: relative;
+  box-shadow: 2px 2px #655C56;
+
+}
+.Icon{
+  background-color: #FFE1E1;
+  padding: 10px;
+  text-align: center;
+  align-content: center;
+}
+.Form{
+  text-align: right;
 }
