dev team cards in place

--- a/client/src/pages/Home.scss
+++ b/client/src/pages/Home.scss
@@ -280,3 +280,100 @@ to {
   animation-fill-mode: forwards;
   // box-shadow: -2px -2px #655C56;
 }
+.sect4{
+  background: white;
+  height: 90vh;
+  text-align: center;
+  margin: 0;
+}
+.Text4{
+  color: #655C56;
+  font-size: 5vh;
+}
+.DevCards{
+  
+    flex-direction: row;
+    display: flex;
+    position: absolute;
+    // flex-wrap: wrap;
+    
+  .card {
+    width: 22vw;
+    background-color: #efefef;
+    border: none;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+.image img {
+    transition: all 0.5s
+}
+
+.card:hover .image img {
+    transform: scale(1.5)
+}
+
+.btn {
+    height: 140px;
+    width: 140px;
+    border-radius: 50%
+}
+
+.name {
+    font-size: 22px;
+    font-weight: bold
+}
+
+.idd {
+    font-size: 14px;
+    font-weight: 600
+}
+
+.idd1 {
+    font-size: 12px
+}
+
+.number {
+    font-size: 22px;
+    font-weight: bold
+}
+
+.follow {
+    font-size: 12px;
+    font-weight: 500;
+    color: #444444
+}
+
+.btn1 {
+    height: 40px;
+    width: 150px;
+    border: none;
+    background-color: #000;
+    color: #aeaeae;
+    font-size: 15px
+}
+
+.text span {
+    font-size: 13px;
+    color: #545454;
+    font-weight: 500
+}
+
+.icons i {
+    font-size: 19px
+}
+
+hr .new1 {
+    border: 1px solid
+}
+
+.join {
+    font-size: 14px;
+    color: #a0a0a0;
+    font-weight: bold
+}
+
+.date {
+    background-color: #ccc
+}
+}
